<resources>
    <string name="app_name">三国演义电子辞典</string>
    <string name="quanbu">全部</string>
    <string name="wei">魏</string>
    <string name="shu">蜀</string>
    <string name="wu">吴</string>
    <string name="xiugai">修改</string>

    <string name="caocao_name">曹操</string>
    <string name="caocao_sex">男</string>
    <string name="caocao_live">（155&#8211;220）</string>
    <string name="caocao_place">豫州沛国谯</string>
    <string name="caocao_nation">魏</string>
    <string name="search_hint">搜索人物或国家</string>
    <string name="guanyu_info">关羽，东汉末年的名将。刘备起兵时，关羽跟随刘备，忠心不二，深受刘备信任。刘备、诸葛亮等入蜀，关羽镇守荆州，刘备夺取汉中后，关羽乘势北伐曹魏，曾围襄樊、擒于禁、斩庞德、威震华夏，中原震动，但是东吴偷袭荆州，关羽兵败被害。关羽去世后，逐渐被神化，被民间尊为“关公”；历代朝廷多有褒封，清代奉为“忠义神武灵佑仁勇威显关圣大帝”，崇为“武圣”，与“文圣” 孔子齐名。《三国演义》尊其为“五虎上将”之首，毛宗岗称其为“《演义》三绝”之“义绝”。</string>
    <string name="liubei_info">刘备，三国时期蜀汉开国皇帝，谥号昭烈皇帝，史家又称为先主。根据《三国志•先主传》，刘备是汉朝的宗室，汉中山靖王刘胜的后代。他为人谦和、礼贤下士，宽以待人，志向远大，知人善用，素以仁德为世人称赞，是三国时期著名的政治家，公元221年在成都称帝，国号汉，年号章武，史称蜀或蜀汉，占有今四川、云南大部、贵州全部，陕西汉中和甘肃白龙江一部分。公元223病逝于白帝城。谥号昭烈帝，庙号烈祖，葬惠陵。后世有众多文艺作品以其为主角，在成都武侯祠有昭烈庙为纪念。</string>
    <string name="zhangfei_info">张飞，三国时期蜀汉重要将领。官至车骑将军，封西乡侯。史书记载张飞是贵族，有智有谋。在中国传统文化中，张飞以其勇猛、鲁莽、嫉恶如仇而著称，虽然此形象主要来源于小说和戏剧等民间艺术，但已深入人心。</string>
    <string name="zhugeliang_info">诸葛亮，三国时期蜀汉丞相、杰出的政治家、军事家、发明家、文学家。在世时被封为武乡侯，死后追谥忠武侯，东晋政权特追封他为武兴王。诸葛亮为匡扶蜀汉政权，呕心沥血，鞠躬尽瘁，死而后已。其代表作有《前出师表》、《后出师表》、《诫子书》等。曾发明木牛流马等，并改造连弩，可一弩十矢俱发。于234年在宝鸡五丈原逝世。诸葛亮在后世受到极大尊崇，成为后世忠臣楷模，智慧化身。成都、宝鸡、汉中、南阳等地有武侯祠，杜甫作《蜀相》赞诸葛亮。</string>
    <string name="caocao_info">曹操是西园八校尉之一，曾只身行刺董卓，失败后和袁绍共同联合天下诸侯讨伐董卓，后独自发展自身势力，一生中先后战胜了袁术、吕布、张绣、袁绍、刘表、张鲁、马超等割据势力，统一了北方。但是在南下讨伐江东的战役中，曹操在赤壁惨败。后来在和蜀汉的汉中争夺战中，曹操再次无功而返。曹操一生未称帝，他病死后，曹丕继位后不久称帝，追封曹操为魏武皇帝。</string>
    <string name="caopi_info">曹魏高祖文皇帝曹丕，三国时期著名的政治家、文学家，曹魏的开国皇帝，公元220－226年在位。沛国谯（今安徽省亳州市）人，魏武帝曹操与卞夫人的长子。《魏书》记载，曹丕文武双全，八岁能提笔为文，善骑射，好击剑，博览古今经传，通晓诸子百家学说。220年正月，曹操逝世，曹丕继任丞相、魏王。之后曹丕受禅登基，以魏代汉。他在位期间，平定边患。击退鲜卑，和匈奴、氐、羌等外夷修好，恢复汉朝在西域的设置。</string>
    <string name="simayi_info">司马懿，三国时期魏国杰出的政治家、军事家，西晋王朝的奠基人。曾任职过曹魏的大都督，大将军，太尉，太傅。是辅佐了魏国三代的托孤辅政之重臣，后期成为掌控魏国朝政的权臣。善谋奇策，多次征伐有功，其中最显著的功绩是两次率大军成功对抗诸葛亮北伐和远征平定辽东。对屯田、修水利等经济有重要贡献。73岁去世，辞郡公和殊礼，葬于首阳山。谥号“宣文”；次子司马昭封晋王后，追封司马懿为宣王；司马炎称帝后，追尊司马懿为宣皇帝。</string>
    <string name="sunquan_info">孙权，三国时代东吴的建立者。孙权的父亲孙坚和兄长孙策，在东汉末年群雄割据中打下了江东基业。十九岁时兄长孙策遭刺杀身亡后，孙权继而掌事，成为一方诸侯。208年，孙权与刘备联合于赤壁打败曹操军队，建立了孙刘联盟。219年，孙权派吕蒙偷袭刘备的荆州成功，使吴国的领土面积大大增加。222年自称吴王，建立吴国；229年称帝。是三国时代统治者中最长的。</string>
    <string name="zhouyu_info">周瑜，洛阳令周异之子，长壮有姿貌、精音律，江东有“曲有误，周郎顾”之语。周瑜少与孙策交好，21岁起随孙策奔赴战场平定江东，后孙策遇刺身亡，孙权继任，周瑜将兵赴丧，以中护军的身份与长史张昭共掌众事。建安十三年（208年），周瑜率江东孙氏集团军队与刘备军队联合，赤壁之战大败曹军，由此奠定了三分天下的基础。建安十四年领南郡太守。建安十五年病逝，年仅36岁。正史上周瑜“性度恢廓”“实奇才也”，范成大誉之为“江左风流美丈夫”。</string>
    <string name="lusu_info">鲁肃，中国东汉末年杰出战略家，著名政治家、外交家。他曾为孙权提出鼎足江东的战略规划，因此得到孙权的赏识，于周瑜死后代替周瑜领兵，守陆口。此后鲁肃为索取荆州而邀荆州守将关羽相见，然而却无功而返。建安二十二年（217），鲁肃去世，年仅46岁，孙权亲自为鲁肃发丧，诸葛亮亦为其发哀。</string>
</resources>
