<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/backbutton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@mipmap/back"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/zengjiabutton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/ic_launcher_round"
        app:backgroundTint="@color/cardview_light_background"
        app:backgroundTintMode="src_atop"
        app:rippleColor="@color/cardview_shadow_end_color"
        android:layout_marginRight="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />


    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/recyclerview"
        android:layout_width="368dp"
        android:layout_height="459dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/zengjiabutton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quanbu"
            android:textSize="17sp"
            android:layout_margin="3dp"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wei"
            android:textSize="17sp"
            android:layout_margin="3dp"
            />
        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shu"
            android:textSize="17sp"
            android:layout_margin="3dp"
            />
        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wu"
            android:textSize="17sp"
            android:layout_margin="3dp"
            />
    </RadioGroup>



</android.support.constraint.ConstraintLayout>
