<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/Top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#1E000000">

        <ImageView
            android:id="@+id/ren_touxiang"
            android:src="@mipmap/caocao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@mipmap/back" />

        <Button
            android:id="@+id/star"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:background="@mipmap/empty_star"
            />

        <Button
            android:id="@+id/xiugaibutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/circle_shape"
            />

        <TextView
            android:id="@+id/ren_name"
            android:text="@string/caocao_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/black"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/ren_nation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wei"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/ren_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caocao_sex"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/ren_live"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caocao_live"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/ren_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caocao_place"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/ren_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caocao_information"
            android:textColor="?android:attr/colorControlNormal"
            android:textSize="18sp"
            android:padding="10dp"
            />
    </LinearLayout>

</LinearLayout>